kubernetes/handbrake/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: handbrake
  namespace: handbrake
spec:
  selector:
    app: handbrake
  ports:
  - name: http
    port: 9999
    targetPort: 9999
    protocol: TCP
  type: ClusterIP
