kubernetes/handbrake/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: handbrake
  namespace: handbrake
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`handbrake.tehmatt.com`)
    kind: Rule
    services:
    - name: handbrake
      port: 9999
    middlewares:
    - name: default-headers
  tls: {}
